<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_mycontest"
        android:icon="@drawable/ic_baseline_local_phone_24"
        android:title="@string/contact" />


    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/my_cart" />


    <item
        android:id="@+id/navigation_service"
        android:icon="@drawable/ic_baseline_bar_chart_24"
        android:title="@string/services" />



    <!--    <item
            android:id="@+id/navigation_phone"
            android:icon="@drawable/phone"
            android:title="@string/phone" />-->
</menu>