<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.auth_fragment.SignUpFragment">

    <EditText
        android:id="@+id/edName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/coror_button"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/_5sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:hint="@string/your_name"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_height="@dimen/_35sdp">

    </EditText>


    <EditText
        android:id="@+id/edNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edName"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/coror_button"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/_5sdp"
        android:inputType="number"
        android:maxLength="10"
        android:drawablePadding="@dimen/_10sdp"
        android:drawableLeft="@drawable/ic_baseline_local_phone_24"
        android:hint="@string/enter_mobile_number"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_height="@dimen/_35sdp">

    </EditText>

    <EditText
        android:id="@+id/edMail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edNumber"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/coror_button"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/_5sdp"
        android:inputType="textEmailAddress"
        android:drawablePadding="@dimen/_10sdp"
        android:drawableLeft="@drawable/ic_baseline_mail_outline_24"
        android:hint="@string/email_id"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_height="@dimen/_35sdp">

    </EditText>


    <EditText
        android:id="@+id/edPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edMail"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/coror_button"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/_5sdp"
        android:inputType="textPassword"
        android:drawablePadding="@dimen/_10sdp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:hint="@string/password"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_height="@dimen/_35sdp">

    </EditText>


 <!--   <EditText
        android:id="@+id/edReferCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edNumber"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/coror_button"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/_5sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:drawableLeft="@drawable/ic_baseline_scatter_plot_24"
        android:hint="@string/refer_code_optional"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_height="@dimen/_35sdp">

    </EditText>-->


    <Button
        android:id="@+id/btSinUp"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:background="@color/colorPrimary"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="@+id/edPassword"
        app:layout_constraintStart_toStartOf="@+id/edPassword"
        app:layout_constraintTop_toBottomOf="@id/edPassword">

    </Button>

    <TextView
        android:id="@+id/txtSigning"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtTerms"
        app:layout_constraintBottom_toBottomOf="@+id/txtTerms"
        android:textSize="@dimen/_9sdp"
        android:textAlignment="textEnd"
        app:layout_constraintRight_toLeftOf="@+id/txtTerms"
        android:text="@string/by_signing_up_you_agree_to_our"
        android:layout_width="0sp"
        android:layout_height="wrap_content">

    </TextView>


    <TextView
        android:id="@+id/txtTerms"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSinUp"
        android:layout_marginTop="@dimen/_20sdp"
        android:textAlignment="textStart"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/_5sdp"
        app:layout_constraintLeft_toRightOf="@+id/txtSigning"
        android:text="@string/terms_conditions"
        android:layout_width="0sp"
        android:layout_height="wrap_content">

    </TextView>


    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ProgressBar>




</androidx.constraintlayout.widget.ConstraintLayout>