<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.auth_fragment.SignInFragment">


    <TextView
        android:id="@+id/txtSignInInto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/muli"
        android:textSize="@dimen/_12sdp"
        android:text="@string/sign_in_into_swadeshie_bazaar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>


    <EditText
        android:id="@+id/edNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSignInInto"
        android:layout_marginTop="@dimen/_16sdp"
        android:inputType="number"
        android:background="@drawable/coror_button"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/_10sdp"
        android:maxLength="10"
        android:hint="@string/enter_mobile_number"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_height="@dimen/_35sdp"/>

    <EditText
        android:id="@+id/edPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edNumber"
        android:layout_marginTop="@dimen/_18sdp"
        android:inputType="textPassword"
        android:background="@drawable/coror_button"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/_10sdp"
        android:maxLength="10"
        android:hint="@string/enter_password"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_height="@dimen/_35sdp"/>


    <TextView
        android:id="@+id/txtForgtPassword"
        app:layout_constraintRight_toRightOf="@id/edPassword"
        app:layout_constraintTop_toBottomOf="@id/edPassword"
        android:layout_marginTop="@dimen/_8sdp"
        android:textColor="@android:color/black"
        android:text="Forgot Password?"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>
    <Button
        android:id="@+id/btSignIn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="70dp"
        android:background="@color/colorPrimary"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="@+id/edPassword"
        app:layout_constraintStart_toStartOf="@+id/edPassword"
        app:layout_constraintTop_toBottomOf="@id/txtForgtPassword">

    </Button>

    <Button
        android:id="@+id/btLoginAsGuest"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="70dp"
        android:background="@color/colorPrimary"
        android:text="@string/guest_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="@+id/edPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edPassword"
        app:layout_constraintTop_toBottomOf="@id/btSignIn">

    </Button>

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="@dimen/_30sdp"
        app:layout_constraintRight_toRightOf="parent"
  >

    </ProgressBar>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OR"
        android:textColor="#0462FA"
        android:fontFamily="@font/muli"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintBottom_toTopOf="@+id/btLoginAsGuest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSignIn" />


</androidx.constraintlayout.widget.ConstraintLayout>