<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.auth_fragment.ForgotPasswordOtpFragment">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>


    <TextView
        android:id="@+id/txtOtp"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/enter_otp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/_15sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <TextView
        android:gravity="center"
        android:id="@+id/tvOtpDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:text="@string/otp_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOtp" />

    <EditText
        android:id="@+id/etOtp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/coror_button"
        android:hint="@string/enter_otp"
        android:textAlignment="center"
        android:inputType="number"
        android:maxLength="10"
        android:paddingLeft="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOtpDescription">

    </EditText>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:rotation="180"
        android:src="@drawable/abc_vector_test"
        app:layout_constraintEnd_toEndOf="@+id/etOtp"
        app:layout_constraintStart_toStartOf="@+id/etOtp"
        app:layout_constraintTop_toBottomOf="@+id/etOtp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/don_t_receive_the_otp"
        app:layout_constraintEnd_toEndOf="@+id/fabNext"
        app:layout_constraintStart_toStartOf="@+id/fabNext"
        app:layout_constraintTop_toBottomOf="@+id/fabNext" />

    <TextView
        android:padding="@dimen/_8sdp"
        android:id="@+id/tvResendCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/resend_code"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ProgressBar>

</androidx.constraintlayout.widget.ConstraintLayout>