<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">


    <ImageView
        android:id="@+id/imgAppBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>


    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:background="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@id/imgAppBar"
        app:layout_constraintLeft_toLeftOf="@id/imgAppBar"
        app:layout_constraintTop_toTopOf="@id/imgAppBar">

    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:text="@string/my_cart"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="@id/imgAppBar"
        app:layout_constraintLeft_toRightOf="@+id/imgBack"
        app:layout_constraintTop_toTopOf="@id/imgAppBar">

    </TextView>


    <TextView
        android:id="@+id/txtTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_20sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="@id/imgAppBar"
        app:layout_constraintRight_toRightOf="@id/imgAppBar"
        app:layout_constraintTop_toTopOf="@id/imgAppBar">

    </TextView>


    <androidx.cardview.widget.CardView
        android:id="@+id/addressCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/imgAppBar">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtShipping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/shipping"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>


            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_5sdp"
                android:text="@string/addnewaddress"
                android:textColor="@color/skublue"
                app:layout_constraintBottom_toBottomOf="@+id/txtShipping"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtShipping">

            </TextView>


            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintLeft_toLeftOf="@+id/txtShipping"
                app:layout_constraintTop_toBottomOf="@id/view2">

            </TextView>


            <TextView
                android:id="@+id/txtAddres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintLeft_toLeftOf="@+id/txtShipping"
                app:layout_constraintTop_toBottomOf="@id/txtName">

            </TextView>


            <TextView
                android:id="@+id/txtNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/txtShipping"
                app:layout_constraintTop_toBottomOf="@id/txtAddres">

            </TextView>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@id/txtShipping">

            </View>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCartList"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/btProceedPay"
        app:layout_constraintTop_toBottomOf="@id/addressCard">

    </androidx.recyclerview.widget.RecyclerView>


    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ProgressBar>

    <Button
        android:id="@+id/btProceedPay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:background="@color/colorPrimary"
        android:text="@string/proceed_to_pay"
        android:visibility="gone"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent">

    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>